--- a/index.html
+++ b/index.html
@@ -214,14 +214,13 @@
                 <input type="text" placeholder="Enter Your Name" id="name" maxlength="15"><br>
                 <input type="text" placeholder="Enter Your Mobile Number" id="number" maxlength="10"><br>
                 <button onclick="connect()">Connect</button>
-
             </div>
             <div class="cart-icon">
             </div>
         </div>
         <div class="footer">
             <div class="text">
-                <h3>Shoppy</h3>
+                <h3>Dukan</h3>
                 <p>Discover the latest trends and elevate your
                    style with Dukan.<br> Shop effortlessly for fashion-forward pieces and must-have<br> accessories in just a few clicks.</p>
             </div>
