--- a/payment.html
+++ b/payment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
             margin: 0;
             background-color: #f4f4f4;
         }
+
         .payment-form {
             background-color: #fff;
             padding: 20px;
@@ -22,10 +24,12 @@
             width: 400px;
             text-align: center;
         }
+
         label {
             display: block;
             margin-bottom: 8px;
         }
+
         input {
             width: 100%;
             padding: 8px;
@@ -41,21 +45,26 @@
             border-radius: 4px;
             cursor: pointer;
         }
+
         button:hover {
             background-color: #45a049;
         }
+
         .error-message {
             color: #ff0000;
             margin-top: 8px;
         }
+
         .cvv-input {
             position: relative;
         }
+
         .cvv-input input {
             width: calc(100% - 24px);
             padding: 8px;
             box-sizing: border-box;
         }
+
         .cvv-input .cvv-mask {
             position: absolute;
             right: 8px;
@@ -66,16 +75,19 @@
         }
     </style>
 </head>
+
 <body>
     <div class="payment-form">
         <h2>Payment Gateway</h2>
         <form onsubmit="return validateForm()">
             <label for="cardNumber">Card Number:</label>
-            <input type="text" id="cardNumber" placeholder="Enter your card number" oninput="validateNumericInput(this)" maxlength="16  ">
+            <input type="text" id="cardNumber" placeholder="Enter your card number" oninput="validateNumericInput(this)"
+                maxlength="16">
             <div id="cardNumberError" class="error-message"></div>
 
             <label for="cardHolder">Card Holder:</label>
-            <input type="text" id="cardHolder" placeholder="Enter the cardholder's name" oninput="validateAlphabeticInput(this)">
+            <input type="text" id="cardHolder" placeholder="Enter the cardholder's name"
+                oninput="validateAlphabeticInput(this)">
             <div id="cardHolderError" class="error-message"></div>
 
             <label for="expiryDate">Expiry Date:</label>
@@ -84,11 +96,12 @@
 
             <label for="cvv">CVV:</label>
             <div class="cvv-input">
-                <input type="password" id="cvv" placeholder="Enter CVV" oninput="validateNumericInput(this)" maxlength="3">
+                <input type="password" id="cvv" placeholder="Enter CVV" oninput="validateNumericInput(this)"
+                    maxlength="3">
             </div>
             <div id="cvvError" class="error-message"></div>
-            <button class="back-button" onclick="goBack()">Back</button>
-            <button onclick="processPayment()">Make Payment</button>
+            <button type="button" class="back-button" onclick="goBack()">Back</button>
+            <button type="submit">Make Payment</button>
         </form>
     </div>
 
@@ -98,10 +111,12 @@
             document.getElementById('cardHolderError').textContent = '';
             document.getElementById('expiryDateError').textContent = '';
             document.getElementById('cvvError').textContent = '';
+
             const cardNumber = document.getElementById('cardNumber').value;
             const cardHolder = document.getElementById('cardHolder').value;
             const expiryDate = document.getElementById('expiryDate').value;
             const cvv = document.getElementById('cvv').value;
+
             if (!cardNumber) {
                 document.getElementById('cardNumberError').textContent = 'Card number is required';
                 return false;
@@ -111,7 +126,7 @@
                 return false;
             }
             if (cardNumber.length !== 16) {
-                document.getElementById('cardNumberError').textContent = 'Card number must be 10 digits';
+                document.getElementById('cardNumberError').textContent = 'Card number must be 16 digits';
                 return false;
             }
             if (!cardHolder) {
@@ -142,27 +157,29 @@
                 document.getElementById('cvvError').textContent = 'CVV must be 3 digits';
                 return false;
             }
-            if (!cardNumber || !cardHolder || !expiryDate || !cvv) {
-                alert('Please fill in all the fields before making the payment.');
-                return false;
-            }
-           alert('Payment successful!');
+
+            alert('Payment successful!');
+            sessionStorage.removeItem('cart');
             window.location.href = "index.html";
             return false;
         }
+
         function validateNumericInput(input) {
-            input.value = input.value.  replace(/[^\d]/g, '');
+            input.value = input.value.replace(/[^\d]/g, '');
         }
 
         function validateAlphabeticInput(input) {
             input.value = input.value.replace(/[^a-zA-Z]/g, '');
         }
+
         function isNumeric(value) {
             return /^\d+$/.test(value);
         }
+
         function isAlphabetic(value) {
             return /^[a-zA-Z]+$/.test(value);
         }
+
         function formatExpiryDate(input) {
             let formattedValue = input.value.replace(/\D/g, '');
             if (formattedValue.length > 2) {
@@ -170,18 +187,22 @@
             }
             input.value = formattedValue;
         }
+
         function isValidExpiryDate(expiryDate) {
             const parts = expiryDate.split('/');
             const month = parseInt(parts[0]);
             const year = parseInt(parts[1]);
             return month >= 1 && month <= 12 && year >= 0 && year <= 99;
         }
+
         function processPayment() {
             sessionStorage.removeItem('cart');
-        }       
-        function goBack(){
-            window.location.href="cart.html";
         }
+
+        function goBack() {
+            window.location.href = "cart.html";
+        }
+
         document.addEventListener('DOMContentLoaded', function () {
             let cart = JSON.parse(sessionStorage.getItem('cart')) || [];
             if (cart.length > 0) {
@@ -193,4 +214,5 @@
         });
     </script>
 </body>
+
 </html>
