--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container" id="container">
         <nav>
@@ -22,7 +24,8 @@
                 <li><a href="#review" id="reviews">Review</a></li>
                 <li><a href="#blog" id="blogs">Blog</a></li>
                 <li><a href="#contact" id="contacts">Contact</a></li>
-                <li><a href="javascript:void(0);" id="cart" onclick="openCart()"><i class="fa-solid fa-shopping-cart"></i></a></li>
+                <li><a href="javascript:void(0);" id="cart" onclick="openCart()">Cart<i
+                            class="fa-solid fa-shopping-cart"></i></a></li>
 
             </ul>
             <div class="icon">
@@ -34,7 +37,8 @@
                 <h2>Fashion Hub</h2>
                 <h1>Fashion For Always</h1>
                 <p>Discover the latest trends and elevate your
-                   style with Dukan. Shop effortlessly for fashion<br>-forward pieces and must-have accessories in just a few clicks.</p>
+                    style with Dukan. Shop effortlessly for fashion<br>-forward pieces and must-have accessories in just
+                    a few clicks.</p>
                 <button><a href="#shop" id="shops1" style="color:black;text-decoration:none">Explore</a></button>
             </div>
             <img src="main.png" alt="">
@@ -56,7 +60,7 @@
                     <h3>₹600 : Only</h3>
                     <div>
                         <button onclick="addToCart('HammerSmith', 600, 'c1.webp')" class="add">Add to Cart</button>
-                    </div>  
+                    </div>
                 </div>
                 <div class="crd">
                     <img src="c3.webp" alt="">
@@ -169,23 +173,24 @@
             <div class="reviews">
                 <div class="reviewCard">
                     <img src="m1.jpg" alt="">
-                    <p id="reviewText2" class="collapsed-text">Absolutely love shopping here! The variety of styles and quality of products
-                         exceeded my expectations.Can't wait to shop again!</p>
+                    <p id="reviewText2" class="collapsed-text">Absolutely love shopping here! The variety of styles and
+                        quality of products
+                        exceeded my expectations.Can't wait to shop again!</p>
                     <button onmouseover="expandReview2()" onmouseout="collapseReview2()">More.</button>
                 </div>
                 <div class="reviewCard">
                     <img src="m2.jpg" alt="">
-                    <p id="reviewText1" class="collapsed-text">Great collection of traditional and contemporary wear. 
+                    <p id="reviewText1" class="collapsed-text">Great collection of traditional and contemporary wear.
                         The website is easy to navigate, and I appreciate the
-                         detailed product descriptions.</p>
-                    <button onmouseover="expandReview1()" onmouseout="collapseReview1()" id ="shifty">More.</button>
+                        detailed product descriptions.</p>
+                    <button onmouseover="expandReview1()" onmouseout="collapseReview1()" id="shifty">More.</button>
                 </div>
                 <div class="reviewCard">
                     <img src="m3.jpg" alt="">
                     <p id="reviewText" class="collapsed-text">My go-to online store! The customer service is exceptional
                         —I had a sizing question, and they were quick to respond
-                         and assist. </p>
-                         <button onmouseover="expandReview()" onmouseout="collapseReview()">More.<br><br></button>
+                        and assist. </p>
+                    <button onmouseover="expandReview()" onmouseout="collapseReview()">More.<br><br></button>
                 </div>
             </div>
         </div>
@@ -196,12 +201,14 @@
             <div class="blogContainer">
                 <div class="blogCard">
                     <img src="c1.webp" alt="">
-                    <p> Dive into our collection of premium T-shirts that redefine casual elegance. Crafted from the finest fabrics.</p>
+                    <p> Dive into our collection of premium T-shirts that redefine casual elegance. Crafted from the
+                        finest fabrics.</p>
                     <a href="https://stylesearch.com/eu/blogs">Read More</a>
                 </div>
                 <div class="blogCard">
                     <img src="c6.webp" alt="">
-                    <p>Indulge in the epitome of sophistication with our curated collection designed for the modern, confident woman. </p>
+                    <p>Indulge in the epitome of sophistication with our curated collection designed for the modern,
+                        confident woman. </p>
                     <a href="https://stylesearch.com/eu/blogs">Read More</a>
                 </div>
             </div>
@@ -222,7 +229,8 @@
             <div class="text">
                 <h3>Dukan</h3>
                 <p>Discover the latest trends and elevate your
-                   style with Dukan.<br> Shop effortlessly for fashion-forward pieces and must-have<br> accessories in just a few clicks.</p>
+                    style with Dukan.<br> Shop effortlessly for fashion-forward pieces and must-have<br> accessories in
+                    just a few clicks.</p>
             </div>
             <div class="text">
                 <h3>Explore</h3>
@@ -234,18 +242,26 @@
             </div>
             <div class="text">
                 <h3>Connect</h3>
-                <p><a href="https://www.youtube.com" target="_blank" class="colored" style="color:white;text-decoration:none">YouTube</a></p>
-                <p><a href="https://www.instagram.com" target="_blank" class="colored" style="color:white;text-decoration:none">Instagram</a></p>
-                <p><a href="https://twitter.com" target="_blank" class="colored" style="color:white;text-decoration:none">Twitter</a></p>
-                <p><a href="https://www.facebook.com" target="_blank" class="colored" style="color:white;text-decoration:none">Facebook</a></p>
-                <p><a href="https://www.github.com" target="_blank" class="colored" style="color:white;text-decoration:none">Github</a></p>
+                <p><a href="https://www.youtube.com" target="_blank" class="colored"
+                        style="color:white;text-decoration:none">YouTube</a></p>
+                <p><a href="https://www.instagram.com" target="_blank" class="colored"
+                        style="color:white;text-decoration:none">Instagram</a></p>
+                <p><a href="https://twitter.com" target="_blank" class="colored"
+                        style="color:white;text-decoration:none">Twitter</a></p>
+                <p><a href="https://www.facebook.com" target="_blank" class="colored"
+                        style="color:white;text-decoration:none">Facebook</a></p>
+                <p><a href="https://www.github.com" target="_blank" class="colored"
+                        style="color:white;text-decoration:none">Github</a></p>
             </div>
             <div class="text">
                 <h3>Nity Grity</h3>
-                <p><a href="terms.html" class="colored" style="color:white;text-decoration:none">Term & Condition</a></p>
-                <p><a href="privacy.html" class="colored" style="color:white;text-decoration:none">Privacy Policy</a></p>
+                <p><a href="terms.html" class="colored" style="color:white;text-decoration:none">Term & Condition</a>
+                </p>
+                <p><a href="privacy.html" class="colored" style="color:white;text-decoration:none">Privacy Policy</a>
+                </p>
                 <p><a href="faqs.html" class="colored" style="color:white;text-decoration:none">Faqs</a></p>
-                <p><a href="credits.html" class="colored" style="color:white;text-decoration:none">Special credits</a></p>
+                <p><a href="credits.html" class="colored" style="color:white;text-decoration:none">Special credits</a>
+                </p>
 
             </div>
         </div>
